--- a/index.html
+++ b/index.html
@@ -1,28 +1,31 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Flatiron Task Lister</title>
-  <link rel="stylesheet" href="./style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>To-Do List</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <div id="main-content">
-    <h1>Task Lister Lite™️</h1>
 
-    <form id="create-task-form" action="" method="POST">
-      <label for="new-task-description">Task description:</label>
-      <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
-      <input type="submit" value="Create New Task">
-    </form>
+    <h1>My To-Do List</h1>
 
-    <div id="list">
-      <h2>My Todos:</h2>
-      <ul id="tasks">
-      </ul>
-    </div>
+    <form id="create-task-form">
+      <label for="new-task-description">Task:</label>
+      <input type="text" id="new-task-description" name="new-task-description" placeholder="Enter task" required>
+  
+      <label for="priority">Priority:</label>
+      <select id="priority">
+          <option value="high">High</option>
+          <option value="medium">Medium</option>
+          <option value="low">Low</option>
+      </select>
+  
+      <input type="submit" value="Add Task">
+  </form>
+  
+  <ul id="tasks"></ul>
 
-    <script src="./src/index.js"></script>
-  </div>
-
+  <script src="./src/index.js"></script>
 </body>
 </html>
