--- a/index.html
+++ b/index.html
@@ -29,3 +29,33 @@
   <script src="./src/index.js"></script>
 </body>
 </html>
+
+<label for="priority">Priority:</label>
+<select id="priority">
+  <option value="high">High</option>
+  <option value="medium">Medium</option>
+  <option value="low">Low</option>
+</select>
+
+<button id="sort-tasks">Sort Tasks</button>
+<ul id="tasks"></ul>
+
+<label for="category">Category:</label>
+<select id="category">
+  <option value="Work">Work</option>
+  <option value="Personal">Personal</option>
+  <option value="Urgent">Urgent</option>
+</select>
+
+<label for="due-date">Due Date:</label>
+<input type="date" id="due-date">
+
+<label for="task-user">User:</label>
+<input type="text" id="task-user" placeholder="Assigned to">
+
+<label for="task-duration">Duration (hrs):</label>
+<input type="number" id="task-duration" placeholder="Hours">
+
+<label for="due-date">Due Date:</label>
+<input type="date" id="due-date">
+
